--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -1,5 +1,34 @@
-{% load tz %}
+{% extends "base.html" %}
+{% load static %}
 
-<h1>Witść</h1>
-{{localtime}}
-<p>{{napis}}</p>
+{% block content %}
+    <div id="image-list">
+        {%include "blog/list_ajax.html"%}
+    </div>
+{% endblock %}
+
+{% block domready %}
+  var page = 1;
+  var empty_page = false;
+  var block_request = false;
+
+  $(window).scroll(function() {
+    var margin = $(document).height() - $(window).height() - 200;
+    if  ($(window).scrollTop() > margin && empty_page == false &&
+    block_request == false) {
+      block_request = true;
+      page += 1;
+      $.get('?page=' + page, function(data) {
+       if(data == '') {
+          empty_page = true;
+        }
+        else {
+          block_request = false;
+          $('#image-list').append(data);
+        }
+      });
+    }
+  });
+{% endblock %}
+{% block side %}
+{% endblock %}
